remove binaries when building

--- a/build
+++ b/build
@@ -4,3 +4,4 @@ nuitka AppImageCreatorCLI.py && echo "AppImageCreatorCLI Done Compiling!"
 fyne build --output AppImageCreatorGUI && echo "AppImageCreatorGUI Done Compiling!"
 ./AppImageCreatorCLI -n:AppImageCreatorCLI -i:appimage.png -m:AppImageCreatorCLI
 ./AppImageCreatorCLI -n:AppImageCreatorGUI -i:appimage.png -m:AppImageCreatorGUI AppImageCreatorCLI
+rm AppImageCreatorCLI AppImageCreatorGUI
